Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MostSpecific26.out
MostSpecific26.java:17:9: compiler.err.ref.ambiguous: m1, kindname.method, <T>m1(MostSpecific26.F1<T>), MostSpecific26, kindname.method, m1(MostSpecific26.F2), MostSpecific26
1 error
